# Lasso-Select

./: CMakeLists.txt  README.md  about.md  changelog.md  logo.psd  mod.json
resources/: alt.psd  lasso.psd  marquee.psd
src/: PolygonNode.cpp  PolygonNode.hpp  intersect.cpp  intersect.hpp  shaders.cpp  shaders.hpp
src/hooks/: EditorUI.cpp  EditorUI.hpp
